--- a/blogfit/package.json
+++ b/blogfit/package.json
@@ -48,6 +48,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^9.0.1",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "typescript-plugin-css-modules": "^5.0.1"
   }
 }
