--- a/blogfit/package.json
+++ b/blogfit/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.64",
     "@uiw/react-md-editor": "^3.20.10",
     "axios": "^1.3.4",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
